--- a/team.html
+++ b/team.html
@@ -184,7 +184,7 @@
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="assets\projects\Camera\benard.jpg" alt="Team Image">
+                                    <img src="assets\benard.jpg" alt="Team Image">
                                 </div>
                                 <div class="team-text">
                                     <h2>Kabunga Benrad</h2>
@@ -201,7 +201,7 @@
                         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                             <div class="team-item">
                                 <div class="team-img">
-                                    <img src="assets\projects\Camera\henery.jpg" alt="Team Image">
+                                    <img src="assets\henery.jpg" alt="Team Image">
                                 </div>
                                 <div class="team-text">
                                     <h2>Mugume Henery</h2>
